--- a/start_all.yaml
+++ b/start_all.yaml
@@ -49,20 +49,26 @@ windows:
         panes:
             - CYB0:
                 - cd drivers/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB0 --dir $MEAS_DIR --int $MEAS_INT --multi
+                - python3 main.py --port /dev/CYB0 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
             - CYB1: 
                 - cd drivers/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB1 --dir $MEAS_DIR --int $MEAS_INT --multi
+                - python3 main.py --port /dev/CYB1 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
             - CYB2: 
                 - cd drivers/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB2 --dir $MEAS_DIR --int $MEAS_INT --multi
-    - Power:
-        - cd drivers/mu_interface/Sensor
-        - sudo python3 ina219.py --dir $MEAS_DIR/Power
-    - BLE:
-        - cd drivers/BLE_Sink
-        - python3 LetsMeasure.py --dir $MEAS_DIR/BLE
-    - ZigBee:
-        - cd drivers/Zigbee_Sink
-        - python3 DataSink.py --dir $MEAS_DIR/Zigbee
+                - python3 main.py --port /dev/CYB2 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
+    - Interface:
+        layout: 'even-vertical'
+        panes:
+            - Power:
+                - cd drivers/mu_interface/Sensor
+                - sudo python3 ina219.py --addr $SINK --dir $MEAS_DIR/Power
+            - Settings:
+                - cd interface
+                - python3 setting_receiver.py
+    # - BLE:
+    #     - cd drivers/BLE_Sink
+    #     - python3 LetsMeasure.py --dir $MEAS_DIR/BLE
+    # - ZigBee:
+    #     - cd drivers/Zigbee_Sink
+    #     - python3 DataSink.py --dir $MEAS_DIR/Zigbee
 
