--- a/autorun/OrangeBox.service
+++ b/autorun/OrangeBox.service
@@ -3,6 +3,8 @@ Description=Automatically run OrangeBox system
 
 [Service]
 Type=oneshot
+User=rock
+Group=rock
 ExecStart=/bin/bash /home/rock/OrangeBox/scripts/startup.sh
 RemainAfterExit=yes
 
