Finalize button and LED control

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ status/
 interface/build/
 interface/dist/
 system/led_driver/led_driver
+system/button_monitor/button_monitor
+config/orange_box.config
