Match changes in user app
- Remove unnecessary files
- Update the cleanup script to leave the exp. number
- Add user app to tmuxinator
- Add option to run tmuxinator w/o BLE & Zigbee
- Move script for ina219 and add temp. sensor
- Update gitman

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 
 # Custom additions.
 .vscode/
+**/__pycache__
 drivers/
 status/
-interface/build/
-interface/dist/
 system/led_driver/led_driver
 system/button_monitor/button_monitor
 config/orange_box.config
