--- a/main.yaml
+++ b/main.yaml
@@ -63,15 +63,17 @@ windows:
         layout: 'even-vertical'
         panes:
             - Power:
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - sudo -E python3 ina219.py --addr $SINK --dir $MEAS_DIR/Power
+                - cd system
+                - sudo -E python3 i2c_sensors.py --addr $SINK --dir $MEAS_DIR/Power
             - Settings:
                 - cd interface
-                - python3 setting_receiver.py
+                - python3 user_app.py
+    <%- if args[0] == "all" %>
     - BLE:
         - cd drivers/BLE_Sink
         - python3 LetsMeasure.py --dir $MEAS_DIR
     - ZigBee:
         - cd drivers/Zigbee_Sink
         - python3 DataSink.py --dir $MEAS_DIR
+    <%- end %>
 
