--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+**.pyc
 # Custom additions.
 .vscode/
 **/__pycache__
@@ -6,4 +6,6 @@ drivers/
 status/
 system/led_driver/led_driver
 system/button_monitor/button_monitor
+system/telegram_bot/telegram_bot.egg-info
+system/telegram_bot/telegram_bot/IDs.txt
 config/orange_box.config
