Start and stop tmuxinator sessions from user interface

--- a/system.yaml
+++ b/system.yaml
@@ -1,4 +1,4 @@
-name: orange_box_main
+name: system
 root: ~/OrangeBox
 
 # Optional tmux socket
@@ -41,24 +41,6 @@ attach: false
 # post: tmux -CC attach -t plastenik
 
 windows:
-    - Blue Boxes:
-        layout: 'tiled'
-        # Synchronize all panes of this window, can be enabled before or after the pane commands run.
-        # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
-        synchronize: after
-        panes:
-            - CYB1:
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB1 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
-            - CYB2: 
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB2 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
-            - CYB3: 
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB3 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
-            - CYB4: 
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB4 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
     - Interface:
         layout: 'even-vertical'
         panes:
@@ -68,12 +50,3 @@ windows:
             - Settings:
                 - cd interface
                 - python3 user_app.py
-    <%- if args[0] == "all" %>
-    - BLE:
-        - cd drivers/BLE_Sink
-        - python3 LetsMeasure.py --dir $MEAS_DIR
-    - ZigBee:
-        - cd drivers/Zigbee_Sink
-        - python3 DataSink.py --dir $MEAS_DIR
-    <%- end %>
-
