Integrate bot with the system

--- a/system.yaml
+++ b/system.yaml
@@ -42,11 +42,14 @@ attach: false
 
 windows:
     - Interface:
-        layout: 'even-vertical'
+        layout: 'tiled'
         panes:
             - Power:
                 - cd system
                 - sudo -E python3 i2c_sensors.py --addr $SINK --dir $MEAS_DIR/Power
-            - Settings:
+            - TelegramBot:
+                - cd system/telegram_bot/telegram_bot
+                - python3 telegram_bot.py
+            - Interface:
                 - cd interface
                 - python3 user_app.py
