Read token from config file

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ status/
 system/led_driver/led_driver
 system/button_monitor/button_monitor
 system/telegram_bot/telegram_bot.egg-info
-system/telegram_bot/telegram_bot/IDs.txt
+system/telegram_bot/telegram_bot/subscribers.txt
+system/telegram_bot/telegram_bot/tokens.yaml
 config/orange_box.config
