--- a/sensors.yaml
+++ b/sensors.yaml
@@ -20,7 +20,7 @@ root: ~/OrangeBox
 # on_project_stop: command
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: source /home/rock/OrangeBox/config/orange_box.config
+pre_window: source ~/OrangeBox/config/orange_box.config
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
@@ -50,22 +50,3 @@ windows:
             - CYB1:
                 - cd drivers/mu_interface/mu_interface/Sensor
                 - python3 main.py --port /dev/CYB1 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
-            - CYB2: 
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB2 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
-            - CYB3: 
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB3 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
-            - CYB4: 
-                - cd drivers/mu_interface/mu_interface/Sensor
-                - python3 main.py --port /dev/CYB4 --addr $SINK --dir $MEAS_DIR --int $MEAS_INT --multi
-    <%- if args[0] == "all" %>
-    - BLE:
-        - cd drivers/BLE_Sink
-        - python3 LetsMeasure.py --dir $MEAS_DIR
-    - ZigBee:
-        - cd drivers/Zigbee_Sink
-        - python3 DataSink.py --dir $MEAS_DIR
-    <%- end %>
-
-
